# fastapi_starter

./: .gitignore  .pdm.toml  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 10ea50374447_add_user_table.py  2806e17b28bb_auto_generate_votes_table.py  53fcf1b680e7_add_phone_number.py  54f68011ae97_add_foreign_key_to_posts.py  ad8c35e1fc38_add_remaining_columns_to_post_table.py  d0b4bcea2525_add_content_column_in_posts_table.py  fbb83e2400f7_create_posts_table.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
test/: conftest.py  database.py  test_users.py
